[package]
name = "bevy-jam-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = { version = "0.16.0", features = ["progress_tracking"] }
iyes_progress = "0.8.0"
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d"] }
rand = "0.8.5"
bevy_tweening = "0.7.0"